assets/css/style.css
/* remove default broweser settings */
* {
    border: none;
    margin: 0;
    padding: 0;
    color: #aaaaaa;
}

body {
    background-color: rgb(58, 56, 56);
}

.container {
    max-width: 1700px;
    margin: 0 auto;
}

header {
    margin: 25px 10px 75px 10px;
}

header h1 {
    font-size: 300%;
    float: left;
    display: block;
    margin-left: 30px
}

p {
    text-align: left;
    margin-left: 5%;
    font-size: 110%;
}

/* hero image style */
.hero-holder {
    width: 100%;
    height: 300px;
    background: url(../images/night-sky.jpg) no-repeat center center;
    background-size: cover;
}

i:hover {
    color: #bb4545;
}

/* navigation styling */
.nav-list {
    font-size: 25px;
}

.nav-list>li {
    float: right;
    list-style-type: none;
    margin-right: 30px;
}

.nav-list a {
    text-decoration: none;
    color: inherit;
}

.nav-list a:hover {
    border-bottom: 5px solid;
}

.nav-list li,
header h1 {
    line-height: 75px;
}

/* section general */
section {
    height: 1200px;
    margin: 1%;
    background-color: #3c3c3c;
    border: 1px solid rgb(76 76 76);
    border-radius: 1%;
    text-align: center;
    overflow: hidden;
}

#confirmation-sec {
    height: 20%;
}

/* about style */
h2 {
    font-size: 190%;
    margin: 1%;
    text-align: center;
}

.about-sec div {
    float: left;
    width: 100%;
}

.about-right-text a {
    font-size: 120%;
}

.about-right-text a:hover {
    font-size: 140%;
    color: #bb4545;
}

.about-left-img {
    background: url(../images/fairing-release.webp) no-repeat center center;
    background-size: cover;
}

.about-sec a {
    margin: 1%;
    width: 100%;
    height: 10px;
}

.about-source {
    margin-top: 2%;
}

.about-iframe {
    width: 100%;
    height: 50%;
    margin-top: 5%;
}

.about-iframe iframe {
    width: 100%;
    height: 100%;
}

/* timeline style */
#timeline-sec {
    height: 1200px;
}

#timeline-sec p {
    display: inline-block;
}

.timeline-holder {
    height: 100%;
    width: 100%;
    clear: both;
    line-height: 0;
    column-count: 2;
    column-gap: 0;
}

.timeline-holder>div {
    width: 100%;
    height: 40%;
}

#timeline-sec p {
    text-align: center;
    margin: 1%;
}

.timeline-img-one {
    background: url(../images/Webb_liftoff_on_Ariane_5_pillars.jpg) no-repeat center center;
    background-size: contain;
}

.timeline-img-two {
    background: url(../images/james-web-timeline.jpeg) no-repeat center center;
    background-size: contain;
}

.timeline-img-three {
    background: url(../images/first-image1.png) no-repeat center center;
    background-size: contain;
}

.timeline-img-four {
    background: url(../images/first-image2.jpg) no-repeat center center;
    background-size: contain;
}

/* signup form style */
#signup-form-sec {
    height: 300px;
    background: url(../images/night-sky.jpg) no-repeat center bottom;
}

#form label,
#signup-form-sec h2 {
    color: #ffffff;
}

.form-input {
    border: 2px solid #3c3c3c;
    border-radius: 2px;
    font-size: 150%;
    background-color: #3c3c3c;
}

.form-input:hover {
    border-color: #ffffff;
}

#form-submit {
    text-align: center;
    font-size: 130%;
    background-color: #3c3c3c;
    display: block;
    color: #ffffff;
    padding: 5px;
    margin-top: 20px;
    margin-left: 45%;
}

#form-submit:hover {
    color: #3c3c3c;
    background-color: #ffffff;
}

/* footer style */
footer {
    height: 250px;
    margin: 10px 10px 5px 10px;
    background-color: #3c3c3c;
    border: 1px solid rgb(76 76 76);
    border-radius: 1%;
    text-align: center;
    overflow: hidden;
}

footer div {
    height: 70%;
}

#footer-confirmation-page {
    height: 15%;
    width: 100%;
    bottom: 0;
    position: fixed;
}

footer p {
    text-align: center;
    margin: 0%;
}

footer li {
    margin-top: 10px;
    display: inline-block;
    list-style-type: none;
    margin-right: 30px;
    box-sizing: border-box;
}

footer a {
    font-size: 35px;
    padding: 10px;
    margin: 10px;
}

footer i:hover {
    font-size: 45px;
    color: #bb4545;
}

footer iframe {
    height: 30%;
    width: 100%;
}

@media screen and (max-width: 1200px) {

    header {
        margin-bottom: 5%;
    }

    h2 {
        font-size: 110%;
    }

    h1 {
        margin-top: 2%;
        line-height: 35px;
        text-align: center;
        font-size: 150%;
    }

    p {
        text-align: left;
        margin-left: 5%;
        font-size: 90%;
    }

    .hero-holder {
        margin-top: 20px;
    }


    .nav-list {
        float: left;
        top: 0;
        height: 5%;
        width: 100%;
        background: #3c3c3c;
        position: fixed;
    }

    .nav-list li {
        line-height: 35px;
        text-align: center;
        font-size: 120%;
    }

    section,
    footer {
        width: 98%;
        height: 1200px;
        margin: 10px auto;
    }

    footer {
        height: 200px;
    }

    #timeline-sec div {
        clear: both;
        line-height: 0;
        column-count: 1;
        column-gap: 0;
    }

    .timeline-holder>div {
        width: 100%;
        height: 23%;
    }

    form label {
        display: block;
    }

    form label {
        font-size: 80%;
    }

    form input {
        width: 50%;
    }

    #form-submit {
        margin: 0;
        margin-top: 10px;
        display: inline-block;
    }

}

@media screen and (max-width: 720px) {

    header {
        height: 150px;
        margin-bottom: 1%;
    }

    header h1 {
        margin-top: 15%;
        font-size: 95%;
        float: left;
    }

    .hero-holder {
        height: 100%;
    }

    .nav-list {
        top: 0;
        left: 0;
        height: 8%;
        width: 100%;
        background: #3c3c3c;
        position: fixed;
        font-size: 130%;
        overflow-y: auto;
    }

    .nav-list>li {
        float: right;
        line-height: 50px;
        margin-left: 1%;
        margin-right: 1%;
        font-size: 105%;
        text-align: center;
    }

    .about-iframe {
        height: 20%;
    }

    section,
    footer {
        width: 98%;
        height: 720px;
        margin: 10px auto;
    }

    footer {
        height: 20%;
        width: 100%;
    }

    footer li {
        height: 20%;
        margin-right: 1%;
    }

    #footer-confirmation-page {
        height: 20%;
        bottom: 0;
        position: fixed;
    }

}

